--- a/pom.xml
+++ b/pom.xml
@@ -138,6 +138,11 @@
             <version>7.14.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
@@ -151,5 +156,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
